--- a/native/app.json
+++ b/native/app.json
@@ -13,14 +13,15 @@
       "bundleIdentifier": "com.views.joyride",
       "supportsTablet": false,
       "infoPlist": {
-        "NSLocationWhenInUseUsageDescription": "We need to know your location to find the closest stations to you."
+        "NSLocationWhenInUseUsageDescription":
+          "We need to know your location to find the closest stations to you."
       }
     },
     "android": {
       "icon": "./assets/logo.png",
       "package": "com.views.joyride",
-      "permissions": [],
-      "versionCode": 1
+      "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"],
+      "versionCode": 2
     },
     "assetBundlePatterns": ["assets/**/*"]
   }
