--- a/native/package.json
+++ b/native/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "devDependencies": {
     "@viewstools/e2e": "^0.1.3",
-    "@viewstools/morph": "^13.0.8",
+    "@viewstools/morph": "^14.0.1",
     "jest-expo": "~27.0.0",
     "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1"
@@ -25,6 +25,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@reactions/component": "^2.0.2",
     "expo": "^27.0.1",
     "geolib": "^2.0.24",
     "prop-types": "^15.6.1",
