--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reactions/component": "^2.0.2",
+    "animated": "^0.2.2",
     "emotion": "^9.1.3",
     "geolib": "^2.0.24",
     "prop-types": "^15.6.1",
@@ -23,7 +25,7 @@
   },
   "devDependencies": {
     "@viewstools/e2e": "^0.1.3",
-    "@viewstools/morph": "^13.0.8",
+    "@viewstools/morph": "^14.0.1",
     "concurrently": "^3.5.1"
   },
   "author": "Views Tools <hi@views.tools>",
