--- a/web/package.json
+++ b/web/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "dependencies": {
     "@reactions/component": "^2.0.2",
+    "@viewstools/animations": "^1.0.6",
     "animated": "^0.2.2",
-    "emotion": "^9.1.3",
+    "emotion": "^9.2.10",
     "geolib": "^2.0.24",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-emotion": "^9.1.3",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "prop-types": "^15.6.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-emotion": "^9.2.10",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "concurrently \"npm run dev\" \"npm run views\"",
@@ -25,8 +26,8 @@
   },
   "devDependencies": {
     "@viewstools/e2e": "^0.1.3",
-    "@viewstools/morph": "^14.0.1",
-    "concurrently": "^3.5.1"
+    "@viewstools/morph": "^15.0.3",
+    "concurrently": "^4.0.1"
   },
   "author": "Views Tools <hi@views.tools>",
   "license": "BSD-3-Clause",
